[gd_scene load_steps=10 format=3 uid="uid://dxfi1ninmdbop"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_wk8ey"]
[ext_resource type="Texture2D" uid="uid://dxbwc446wi4bm" path="res://assets/images/chalkboard-background.jpg" id="2_2tpqb"]
[ext_resource type="Texture2D" uid="uid://bv02aaipfbskx" path="res://assets/images/backspace-icon.png" id="2_dvkbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rp33r"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_emma6"]
Label/styles/normal = SubResource("StyleBoxFlat_rp33r")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqj3m"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_27s5e"]
Button/styles/disabled = SubResource("StyleBoxFlat_dqj3m")
Button/styles/focus = SubResource("StyleBoxFlat_dqj3m")
Button/styles/hover = SubResource("StyleBoxFlat_dqj3m")
Button/styles/normal = SubResource("StyleBoxFlat_dqj3m")
Button/styles/pressed = SubResource("StyleBoxFlat_dqj3m")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0sbg"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7xrtf"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_wk8ey")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 10
theme = SubResource("Theme_emma6")
theme_override_font_sizes/font_size = 150
horizontal_alignment = 2
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_27s5e")
columns = 4

[node name="Button0" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "0"

[node name="Button1" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "1"

[node name="Button2" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "2"

[node name="Button3" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "3"

[node name="Button4" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "4"

[node name="Button5" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "5"

[node name="Button6" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "6"

[node name="Button7" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "7"

[node name="Button8" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "8"

[node name="Button9" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "9"

[node name="ButtonAdd" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "+"

[node name="ButtonSubtract" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "-"

[node name="ButtonMultiply" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "*"

[node name="ButtonDivide" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "/"

[node name="ButtonLeftParentheses" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "("

[node name="ButtonRightParentheses" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = ")"

[node name="ButtonPoint" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "."

[node name="ButtonClr" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "C"

[node name="ButtonBackspace" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
icon = ExtResource("2_dvkbd")
icon_alignment = 1

[node name="ButtonEquals" type="Button" parent="VSplitContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "="

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_2tpqb")
expand_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -155.0
offset_right = -10.0
offset_bottom = 42.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_s0sbg")

[node name="CowardMode" type="Button" parent="PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_7xrtf")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7xrtf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7xrtf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7xrtf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7xrtf")
toggle_mode = true
action_mode = 0
text = "Normal"
expand_icon = true

[connection signal="pressed" from="VSplitContainer/GridContainer/Button0" to="." method="_on_button_pressed" binds= ["0"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/Button1" to="." method="_on_button_pressed" binds= ["1"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/Button2" to="." method="_on_button_pressed" binds= ["2"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/Button3" to="." method="_on_button_pressed" binds= ["3"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/Button4" to="." method="_on_button_pressed" binds= ["4"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/Button5" to="." method="_on_button_pressed" binds= ["5"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/Button6" to="." method="_on_button_pressed" binds= ["6"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/Button7" to="." method="_on_button_pressed" binds= ["7"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/Button8" to="." method="_on_button_pressed" binds= ["8"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/Button9" to="." method="_on_button_pressed" binds= ["9"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonAdd" to="." method="_on_button_pressed" binds= ["+"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonSubtract" to="." method="_on_button_pressed" binds= ["-"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonMultiply" to="." method="_on_button_pressed" binds= ["*"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonDivide" to="." method="_on_button_pressed" binds= ["/"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonLeftParentheses" to="." method="_on_button_pressed" binds= ["("]]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonRightParentheses" to="." method="_on_button_pressed" binds= [")"]]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonPoint" to="." method="_on_button_pressed" binds= ["."]]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonClr" to="." method="_on_button_clr_pressed"]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonBackspace" to="." method="_on_button_backspace_pressed"]
[connection signal="pressed" from="VSplitContainer/GridContainer/ButtonEquals" to="." method="_on_button_equals_pressed"]
[connection signal="toggled" from="PanelContainer/CowardMode" to="." method="_on_coward_mode_toggled"]
